add comment feature and bug fix
